Fix hamburger menu alignment - remove first-child padding override

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -609,10 +609,6 @@
   position: relative;
 }
 
-.nav-menu > li:first-child .nav-link {
-  padding-left: 0;
-}
-
 .nav-link {
   display: flex;
   align-items: center;
